--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="container">
         <div class="content">
-            <h1>Wanna grab a coffee?</h1>
-            <p>Pls let me know :)</p>
+            <h1>Am I wiser?</h1>
+            <p>Pls answer honestly :)</p>
             <button id="hangoutButton">Yes!</button>
             <button id="noButton">No</button>
         </div>
